MDEV-4829 BEFORE INSERT triggers dont issue 1406 error.   Turn the 'abort_on_warning' on for assigning value to fields.